# bsdtar-prebuilt

./: .bazelrc  BUILD.bazel  MODULE.bazel
.github/workflows/: build.yaml  release.yml
patches/: libarchive_enable_xar_support.patch  libarchive_windows_mingw.patch
