load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

platform(
    name = "linux_arm64_musl",
    parents = ["@zig_sdk//libc_aware/platform:linux_arm64_musl"],
    flags = ["--@libarchive//:use_mbedtls=true"],
)

platform(
    name = "linux_amd64_musl",
    parents = ["@zig_sdk//libc_aware/platform:linux_amd64_musl"],
    flags = ["--@libarchive//:use_mbedtls=true"],
)

PLATFORMS = [
    "@zig_sdk//platform:darwin_amd64",
    "@zig_sdk//platform:darwin_arm64",
    ":linux_amd64_musl",
    ":linux_arm64_musl",
]

[
    platform_transition_filegroup(
        name = "for_" + platform.split(":")[1],
        srcs = ["@libarchive//tar"],
        target_platform = platform,
        tags = ["manual"],
    )
    for platform in PLATFORMS
]

filegroup(
    name = "for_all_platforms",
    srcs = ["for_" + platform.split(":")[1] for platform in PLATFORMS],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)
