load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")

PLATFORMS = [
    "@llvm//platforms:macos_x86_64",
    "@llvm//platforms:macos_aarch64",
    "@llvm//platforms:linux_x86_64_musl",
    "@llvm//platforms:linux_aarch64_musl",
    "@llvm//platforms:windows_x86_64",
    "@llvm//platforms:windows_aarch64",
]

[
    platform_transition_filegroup(
        name = "for_" + platform.split(":")[1],
        srcs = ["@libarchive//tar"],
        target_platform = platform,
    )
    for platform in PLATFORMS
]

filegroup(
    name = "for_all_platforms",
    srcs = ["for_" + platform.split(":")[1] for platform in PLATFORMS],
)

platform(
    name = "local_linux_platform",
    constraint_values = [
        "@llvm//constraints/libc:gnu.2.28",
    ],
    parents = ["@platforms//host"],
)

platform(
    name = "local_windows_platform",
    constraint_values = [
        "@llvm//constraints/windows/abi:gnullvm",
    ],
    parents = ["@platforms//host"],
)
