bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "libarchive", version = "3.8.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.0")
bazel_dep(name = "platforms", version = "1.0.0")

# libarchive_bsdtar_windows_crlf.patch
# - tolerate mtree files with CRLF endings
# - TODO: remove when https://github.com/libarchive/libarchive/pull/2717 is merged
# libarchive_enable_xar_support.patch
# - add libxml2 dependency and md5 support to enable xar support
single_version_override(
    module_name = "libarchive",
    patches = [
        "//patches:libarchive_bsdtar_windows_crlf.patch",
        "//patches:libarchive_enable_xar_support.patch",
    ],
    patch_strip = 1,
)

# bazel9 support: to be upstreamed to libarchive
single_version_override(
    module_name = "bzip2",
    version = "1.0.8.bcr.3",
)

single_version_override(
    module_name = "xz",
    version = "5.4.5.bcr.7",
)

single_version_override(
    module_name = "mbedtls",
    version = "3.6.0.bcr.1",
)

archive_override(
    module_name = "hermetic_cc_toolchain",
    urls = ["https://github.com/uber/hermetic_cc_toolchain/archive/f6b21a0b8d53ec8ab03b0e9fcdd2376c9f2ebd2f.tar.gz"],
    strip_prefix = "hermetic_cc_toolchain-f6b21a0b8d53ec8ab03b0e9fcdd2376c9f2ebd2f",
    integrity = "sha256-kJRZ92H84ta4rVPUbi7YByZaawsrqiV+W2NWsVPMkd0=",
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
    "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
)
