bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "libarchive", version = "3.8.1")
bazel_dep(name = "llvm", version = "0.7.7")
bazel_dep(name = "xz", version = "5.4.5.bcr.8")  # For compatibility with Bazel 9+
bazel_dep(name = "bzip2", version = "1.0.8.bcr.4")  # For compatibility with Bazel 9+

# libarchive_bsdtar_windows_crlf.patch
# - tolerate mtree files with CRLF endings
# - TODO: remove when https://github.com/libarchive/libarchive/pull/2717 is merged
# libarchive_windows_mingw.patch
# - avoid redefining mode_t before MinGW sys/types.h provides it
# - link bcrypt for Windows clang/MinGW builds using libarchive's BCrypt path
single_version_override(
    module_name = "libarchive",
    patch_strip = 1,
    patches = [
        "//patches:libarchive_bsdtar_windows_crlf.patch",
        "//patches:libarchive_windows_mingw.patch",
    ],
)

toolchains = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
use_repo(toolchains, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")
